Prueba de commit de merma

--- a/pruebaxipe/xipe/templates/merma.html
+++ b/pruebaxipe/xipe/templates/merma.html
@@ -16,7 +16,7 @@
 
 <div class="container mt-4">
   <div class="card shadow-lg p-4">
-    <h2 class="text-center text-danger">Formato de Registro de Merma</h2>
+    <h2 class="text-center text-danger">Formato</h2>
 
     <!-- Datos generales -->
     <form>
